Added Kyber to Visual Studio build tests

--- a/cryptest.vcxproj.filters
+++ b/cryptest.vcxproj.filters
@@ -509,12 +509,18 @@
     <ClCompile Include="fipsalgt.cpp">
       <Filter>Source Code</Filter>
     </ClCompile>
+    <ClCompile Include="kyber_test.cpp">
+      <Filter>Source Code</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="bench.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="factory.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="kyber_test.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="validate.h">
