--- a/cryptest.vcxproj
+++ b/cryptest.vcxproj
@@ -210,6 +210,7 @@
     <ClCompile Include="datatest.cpp" />
     <ClCompile Include="dlltest.cpp" />
     <ClCompile Include="fipsalgt.cpp" />
+    <ClCompile Include="kyber_test.cpp" />
     <ClCompile Include="regtest1.cpp" />
     <ClCompile Include="regtest2.cpp" />
     <ClCompile Include="regtest3.cpp" />
@@ -230,6 +231,7 @@
   <ItemGroup>
     <ClInclude Include="bench.h" />
     <ClInclude Include="factory.h" />
+    <ClInclude Include="kyber_test.h" />
     <ClInclude Include="validate.h" />
   </ItemGroup>
   <!-- Test Vectors -->
