--- a/cryptest.vcxproj
+++ b/cryptest.vcxproj
@@ -216,6 +216,7 @@
     <ClCompile Include="regtest2.cpp" />
     <ClCompile Include="regtest3.cpp" />
     <ClCompile Include="regtest4.cpp" />
+    <ClCompile Include="saber_test.cpp" />
     <ClCompile Include="validat0.cpp" />
     <ClCompile Include="validat1.cpp" />
     <ClCompile Include="validat2.cpp" />
@@ -234,6 +235,7 @@
     <ClInclude Include="dilithium_test.h" />
     <ClInclude Include="factory.h" />
     <ClInclude Include="kyber_test.h" />
+    <ClInclude Include="saber_test.h" />
     <ClInclude Include="validate.h" />
   </ItemGroup>
   <!-- Test Vectors -->
