--- a/cryptest.vcxproj.filters
+++ b/cryptest.vcxproj.filters
@@ -518,6 +518,9 @@
     <ClCompile Include="saber_test.cpp">
       <Filter>Source Code</Filter>
     </ClCompile>
+    <ClCompile Include="pqc_benchmark.cpp">
+      <Filter>Source Code</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="bench.h">
@@ -530,6 +533,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="kyber_test.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="pqc_benchmark.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="saber_test.h">
